Updated link. Fixed spacing

--- a/assets/stylesheets/hopla.sass
+++ b/assets/stylesheets/hopla.sass
@@ -72,7 +72,7 @@ code
 pre
   code
     display: inline-block
-    padding: $spacing
+    padding: $spacing/2
     font-size: 80%
     font-family: $font-code
     background: darken(#e9d091, 10%)
